--- a/roles/trilio_kubernetes/defaults/main.yaml
+++ b/roles/trilio_kubernetes/defaults/main.yaml
@@ -135,6 +135,10 @@ trilio_kubernetes_restore_data_only: false
 # Currently only for CR restores
 trilio_kubernetes_restore_delete_pvc_before_restore: false
 
+# Optional: Add a delay (in seconds) before proceeding with workflow steps
+trilio_kubernetes_delay_enabled: false
+trilio_kubernetes_delay_seconds: 300  # 5 minutes
+
 # Continuous Restore
 trilio_kubernetes_cr_backupplan: "{{ trilio_kubernetes_backupplan_name }}"
 trilio_kubernetes_event_target: "{{ trilio_kubernetes_target_name }}"
