--- a/roles/trilio_kubernetes/tasks/trilio_kubernetes_create_restore.yaml
+++ b/roles/trilio_kubernetes/tasks/trilio_kubernetes_create_restore.yaml
@@ -14,6 +14,14 @@
         - trilio_kubernetes_restore_type == "cr"
         - trilio_kubernetes_distro == 'kubernetes' or trilio_kubernetes_auth_type == 'external'
 
+
+    - name: Execute Restore from Snapshot (External Auth)
+      ansible.builtin.include_tasks: "trilio_kubernetes_create_restore_snapshot.yaml"
+      when:
+        - trilio_kubernetes_create_restore | bool
+        - trilio_kubernetes_restore_type == 'snapshot'
+        - trilio_kubernetes_auth_type == 'external'
+
     - name: Execute Restore Tasks
       ansible.builtin.include_tasks: "trilio_kubernetes_create_restore_kubeconfig.yaml"
       when:
